--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIvaQaPdQOhs7NJb3lDqHs",
+      "authorship_tag": "ABX9TyPgiWdu1nopb5tc84BB7FZD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,15 +56,14 @@
         "print('Git clone project and install requirements...')\n",
         "!git clone https://github.com/Winfredy/SadTalker &> /dev/null\n",
         "%cd SadTalker \n",
-        "!export PYTHONPATH=/content/SadTalker:$PYTHONPATH\n",
-        "!pip uninstall -y torch\n",
+        "!export PYTHONPATH=/content/SadTalker:$PYTHONPATH \n",
         "!python3.8 -m pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113\n",
         "!apt update\n",
         "!apt install ffmpeg &> /dev/null  \n",
         "!python3.8 -m pip install -r requirements.txt\n",
         "!python3.8 -m pip install cmake==3.25.2\n",
         "!python3.8 -m pip install boost==0.1  \n",
-        "!python3.8 -m pip install dlib==19.24.0  "
+        "!python3.8 -m pip install dlib==19.24.0 #need to wait for about 25 minutes"
       ]
     },
     {
@@ -90,8 +89,8 @@
         "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/mapping_00229-model.pth.tar -O ./checkpoints/mapping_00229-model.pth.tar\n",
         "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/BFM_Fitting.zip -O ./checkpoints/BFM_Fitting.zip\n",
         "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/hub.zip -O ./checkpoints/hub.zip\n",
-        "!unzip ./checkpoints/hub.zip\n",
-        "!unzip ./checkpoints/BFM_Fitting.zip"
+        "!unzip ./checkpoints/hub.zip -d ./checkpoints/\n",
+        "!unzip ./checkpoints/BFM_Fitting.zip -d ./checkpoints/"
       ],
       "metadata": {
         "id": "eDw3_UN8K2xa"
