--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPgiWdu1nopb5tc84BB7FZD",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Installation"
-      ],
       "metadata": {
         "id": "kA89DV-sKS4i"
-      }
+      },
+      "source": [
+        "Installation"
+      ]
     },
     {
       "cell_type": "code",
@@ -68,15 +52,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Download models"
-      ],
       "metadata": {
         "id": "DddcKB_nKsnk"
-      }
+      },
+      "source": [
+        "Download models"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eDw3_UN8K2xa"
+      },
+      "outputs": [],
       "source": [
         "print('Download pre-trained models...')\n",
         "!mkdir ./checkpoints  \n",
@@ -91,34 +80,46 @@
         "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/hub.zip -O ./checkpoints/hub.zip\n",
         "!unzip ./checkpoints/hub.zip -d ./checkpoints/\n",
         "!unzip ./checkpoints/BFM_Fitting.zip -d ./checkpoints/"
-      ],
-      "metadata": {
-        "id": "eDw3_UN8K2xa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Animation"
-      ],
       "metadata": {
         "id": "-khNZcnGK4UK"
-      }
+      },
+      "source": [
+        "Animation"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ToBlDusjK5sS"
+      },
+      "outputs": [],
       "source": [
         "!python3.8 inference.py --driven_audio ./examples/driven_audio/chinese_poem1.wav \\\n",
         "           --source_image ./examples/source_image/art_18.png \\\n",
         "           --result_dir ./examples/results "
-      ],
-      "metadata": {
-        "id": "ToBlDusjK5sS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPgiWdu1nopb5tc84BB7FZD",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
