--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -1,13 +1,41 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<div align=\"center\">\n",
+        "\n",
+        "<h2> 😭 SadTalker： <span style=\"font-size:12px\">Learning Realistic 3D Motion Coefficients for  Stylized Audio-Driven Single Image Talking Face Animation </span> </h2> \n",
+        "\n",
+        "  <a href='https://arxiv.org/abs/2211.12194'><img src='https://img.shields.io/badge/ArXiv-2211.14758-red'></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='https://sadtalker.github.io'><img src='https://img.shields.io/badge/Project-Page-Green'></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href='https://github.com/Winfredy/SadTalker'><img src='https://img.shields.io/badge/Github-SadTalker-blueviolet'/></a>\n",
+        "\n",
+        "<div>\n",
+        "    <a target='_blank'>Wenxuan Zhang <sup>*,1,2</sup> </a>&emsp;\n",
+        "    <a href='https://vinthony.github.io/' target='_blank'>Xiaodong Cun <sup>*,2</a>&emsp;\n",
+        "    <a href='https://xuanwangvc.github.io/' target='_blank'>Xuan Wang <sup>3</sup></a>&emsp;\n",
+        "    <a href='https://yzhang2016.github.io/' target='_blank'>Yong Zhang <sup>2</sup></a>&emsp;\n",
+        "    <a href='https://xishen0220.github.io/' target='_blank'>Xi Shen <sup>2</sup></a>&emsp; </br>\n",
+        "    <a href='https://yuguo-xjtu.github.io/' target='_blank'>Yu Guo<sup>1</sup> </a>&emsp;\n",
+        "    <a href='https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ' target='_blank'>Ying Shan <sup>2</sup> </a>&emsp;\n",
+        "    <a target='_blank'>Fei Wang <sup>1</sup> </a>&emsp;\n",
+        "</div>\n",
+        "<br>\n",
+        "<div>\n",
+        "    <sup>1</sup> Xi'an Jiaotong University &emsp; <sup>2</sup> Tencent AI Lab &emsp; <sup>3</sup> Ant Group &emsp; \n",
+        "</div>\n",
+        "<br>\n",
+        "<i><strong><a href='https://arxiv.org/abs/2211.12194' target='_blank'>CVPR 2023</a></strong></i>\n",
+        "<br>\n",
+        "<br>\n",
+        "\n",
+        "![sadtalker](https://user-images.githubusercontent.com/4397546/222490039-b1f6156b-bf00-405b-9fda-0c9a9156f991.gif)\n",
+        "\n",
+        "TL;DR: A realistic and stylized talking head video generation method from a single image and audio\n"
       ]
     },
     {
@@ -27,8 +55,6 @@
       },
       "outputs": [],
       "source": [
-        "#install python3.8\n",
-        "!apt install python3.8.16  \n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.8 2  \n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.9 1  \n",
         "!python --version  \n",
@@ -47,7 +73,9 @@
         "!python3.8 -m pip install -r requirements.txt\n",
         "!python3.8 -m pip install cmake==3.25.2\n",
         "!python3.8 -m pip install boost==0.1  \n",
-        "!python3.8 -m pip install dlib==19.24.0 #need to wait for about 25 minutes"
+        "# !python3.8 -m pip install dlib==19.24.0 #need to wait for about 25 minutes\n",
+        "# !python3.8 -m pip install https://pypi.python.org/packages/da/06/bd3e241c4eb0a662914b3b4875fc52dd176a9db0d4a2c915ac2ad8800e9e/dlib-19.7.0-cp36-cp36m-win_amd64.whl#md5=b7330a5b2d46420343fbed5df69e6a3f \n",
+        "!python3.8 -m pip install dlib-bin"
       ]
     },
     {
@@ -83,6 +111,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# borrow from makeittalk\n",
+        "import ipywidgets as widgets\n",
+        "import glob\n",
+        "import matplotlib.pyplot as plt\n",
+        "print(\"Choose the image name to animate: (saved in folder 'examples/')\")\n",
+        "img_list = glob.glob1('examples/source_image', '*.png')\n",
+        "img_list.sort()\n",
+        "img_list = [item.split('.')[0] for item in img_list]\n",
+        "default_head_name = widgets.Dropdown(options=img_list, value='art_18')\n",
+        "def on_change(change):\n",
+        "    if change['type'] == 'change' and change['name'] == 'value':\n",
+        "        plt.imshow(plt.imread('examples/source_image/{}.png'.format(default_head_name.value)))\n",
+        "        plt.axis('off')\n",
+        "        plt.show()\n",
+        "default_head_name.observe(on_change)\n",
+        "display(default_head_name)\n",
+        "plt.imshow(plt.imread('examples/source_image/{}.png'.format(default_head_name.value)))\n",
+        "plt.axis('off')\n",
+        "plt.show()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-khNZcnGK4UK"
@@ -99,9 +154,40 @@
       },
       "outputs": [],
       "source": [
+        "# selected audio from exmaple/driven_audio\n",
+        "img = 'examples/source_image/{}.png'.format(default_head_name.value)\n",
+        "print(img)\n",
         "!python3.8 inference.py --driven_audio ./examples/driven_audio/chinese_poem1.wav \\\n",
-        "           --source_image ./examples/source_image/art_18.png \\\n",
+        "           --source_image {img} \\\n",
         "           --result_dir ./examples/results "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# visualize code from makeittalk\n",
+        "from IPython.display import HTML\n",
+        "from base64 import b64encode\n",
+        "import os, sys\n",
+        "\n",
+        "# get the last from results\n",
+        "\n",
+        "results = sorted(os.listdir('examples/results/'))\n",
+        "\n",
+        "mp4_name = glob.glob('examples/results/'+results[-1]+'/*.mp4')[0]\n",
+        "\n",
+        "mp4 = open('{}'.format(mp4_name),'rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "\n",
+        "print('Display animation: {}'.format(mp4_name), file=sys.stderr)\n",
+        "display(HTML(\"\"\"\n",
+        "  <video width=256 controls>\n",
+        "        <source src=\"%s\" type=\"video/mp4\">\n",
+        "  </video>\n",
+        "  \"\"\" % data_url))\n"
       ]
     }
   ],
