gitignore & update colab

--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -39,12 +39,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kA89DV-sKS4i"
       },
       "source": [
-        "Installation"
+        "Installation (around 5 mins)"
       ]
     },
     {
@@ -55,6 +56,10 @@
       },
       "outputs": [],
       "source": [
+        "\n",
+        "### make sure that CUDA is available in Edit -> Nootbook settings -> GPU\n",
+        "!nvidia-smi\n",
+        "\n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.8 2  \n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.9 1  \n",
         "!python --version  \n",
@@ -79,12 +84,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DddcKB_nKsnk"
       },
       "source": [
-        "Download models"
+        "Download models (1 mins)"
       ]
     },
     {
