gitignore & update colab

--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -3,6 +3,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
         "id": "view-in-github"
