--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -42,15 +42,21 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### make sure that CUDA is available in Edit -> Nootbook settings -> GPU\n",
+        "!nvidia-smi --query-gpu=name,memory.total,memory.free --format=csv,noheader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Mdq6j4E5KQAR"
       },
       "outputs": [],
       "source": [
-        "\n",
-        "### make sure that CUDA is available in Edit -> Nootbook settings -> GPU\n",
-        "!nvidia-smi\n",
-        "\n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.8 2  \n",
         "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.9 1  \n",
         "!python --version  \n",
@@ -196,11 +202,17 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.10"
+      "version": "3.8.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "df0893f56f349688326838aaeea0de204df53a132722cbd565e54b24a8fec5f6"
+      }
     }
   },
   "nbformat": 4,
