--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -182,9 +182,9 @@
         "\n",
         "# get the last from results\n",
         "\n",
-        "results = sorted(os.listdir('examples/results/'))\n",
+        "results = sorted(os.listdir('./results/'))\n",
         "\n",
-        "mp4_name = glob.glob('examples/results/'+results[-1]+'/*.mp4')[0]\n",
+        "mp4_name = glob.glob('./results/'+results[-1]+'/*.mp4')[0]\n",
         "\n",
         "mp4 = open('{}'.format(mp4_name),'rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
