--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -166,7 +166,7 @@
         "print(img)\n",
         "!python3.8 inference.py --driven_audio ./examples/driven_audio/RD_Radio31_000.wav \\\n",
         "           --source_image {img} \\\n",
-        "           --result_dir ./examples/results "
+        "           --result_dir ./results "
       ]
     },
     {
