--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -166,7 +166,7 @@
         "print(img)\n",
         "!python3.8 inference.py --driven_audio ./examples/driven_audio/RD_Radio31_000.wav \\\n",
         "           --source_image {img} \\\n",
-        "           --result_dir ./examples/results "
+        "           --result_dir ./results "
       ]
     },
     {
@@ -205,17 +205,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.0"
+      "version": "3.9.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "df0893f56f349688326838aaeea0de204df53a132722cbd565e54b24a8fec5f6"
+        "hash": "db5031b3636a3f037ea48eb287fd3d023feb9033aefc2a9652a92e470fb0851b"
       }
     }
   },
