--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -1,18 +1,27 @@
 {
   "cells": [
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oLFIOlcuXpTa"
+      },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb)"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "view-in-github"
       },
       "source": [
@@ -30,7 +39,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kA89DV-sKS4i"
@@ -41,9 +49,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "execution_count": 11,
+      "metadata": {
+        "id": "YY3-1o7oXpTe",
+        "outputId": "e0fd0b55-13d1-45e5-9f39-320d1581760a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tesla T4, 15360 MiB, 15101 MiB\n"
+          ]
+        }
+      ],
       "source": [
         "### make sure that CUDA is available in Edit -> Nootbook settings -> GPU\n",
         "!nvidia-smi --query-gpu=name,memory.total,memory.free --format=csv,noheader"
@@ -85,7 +107,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DddcKB_nKsnk"
@@ -120,7 +141,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "eb2aX8bhXpTh"
+      },
       "outputs": [],
       "source": [
         "# borrow from makeittalk\n",
@@ -172,7 +195,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "E1kegnbdXpTi"
+      },
       "outputs": [],
       "source": [
         "# visualize code from makeittalk\n",
@@ -200,9 +225,8 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyPgiWdu1nopb5tc84BB7FZD",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "base",
@@ -217,7 +241,9 @@
       "interpreter": {
         "hash": "db5031b3636a3f037ea48eb287fd3d023feb9033aefc2a9652a92e470fb0851b"
       }
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
