--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -3,17 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oLFIOlcuXpTa"
+        "id": "M74Gs_TjYl_B"
       },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Winfredy/SadTalker/blob/main/quick_demo.ipynb)"
@@ -49,23 +39,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "id": "YY3-1o7oXpTe",
-        "outputId": "e0fd0b55-13d1-45e5-9f39-320d1581760a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "qJ4CplXsYl_E"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tesla T4, 15360 MiB, 15101 MiB\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "### make sure that CUDA is available in Edit -> Nootbook settings -> GPU\n",
         "!nvidia-smi --query-gpu=name,memory.total,memory.free --format=csv,noheader"
@@ -142,7 +120,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "eb2aX8bhXpTh"
+        "id": "kK7DYeo7Yl_H"
       },
       "outputs": [],
       "source": [
@@ -196,7 +174,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E1kegnbdXpTi"
+        "id": "fAjwGmKKYl_I"
       },
       "outputs": [],
       "source": [
@@ -225,8 +203,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "base",
