--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -72,16 +72,7 @@
         "!python3.8 -m pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113\n",
         "!apt update\n",
         "!apt install ffmpeg &> /dev/null  \n",
-        "!python3.8 -m pip install -r requirements.txt\n",
-        "!python3.8 -m pip install cmake==3.25.2\n",
-        "!python3.8 -m pip install boost==0.1  \n",
-        "# !python3.8 -m pip install dlib==19.24.0 #need to wait for about 25 minutes\n",
-        "# !python3.8 -m pip install https://pypi.python.org/packages/da/06/bd3e241c4eb0a662914b3b4875fc52dd176a9db0d4a2c915ac2ad8800e9e/dlib-19.7.0-cp36-cp36m-win_amd64.whl#md5=b7330a5b2d46420343fbed5df69e6a3f \n",
-        "!python3.8 -m pip install dlib-bin\n",
-        "!python3.8 -m pip install basicsr==1.4.2\n",
-        "!python3.8 -m pip install facexlib==0.2.5\n",
-        "### install gpfgan for enhancer\n",
-        "!python3.8 -m pip install git+https://github.com/TencentARC/GFPGAN"
+        "!python3.8 -m pip install -r requirements.txt"
       ]
     },
     {
@@ -102,18 +93,8 @@
       "outputs": [],
       "source": [
         "print('Download pre-trained models...')\n",
-        "!mkdir ./checkpoints  \n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/auido2exp_00300-model.pth -O ./checkpoints/auido2exp_00300-model.pth\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/auido2pose_00140-model.pth -O ./checkpoints/auido2pose_00140-model.pth\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/epoch_20.pth -O ./checkpoints/epoch_20.pth\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/facevid2vid_00189-model.pth.tar -O ./checkpoints/facevid2vid_00189-model.pth.tar\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/shape_predictor_68_face_landmarks.dat -O ./checkpoints/shape_predictor_68_face_landmarks.dat\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/wav2lip.pth -O ./checkpoints/wav2lip.pth\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/mapping_00229-model.pth.tar -O ./checkpoints/mapping_00229-model.pth.tar\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/BFM_Fitting.zip -O ./checkpoints/BFM_Fitting.zip\n",
-        "!wget https://github.com/Winfredy/SadTalker/releases/download/v0.0.1/hub.zip -O ./checkpoints/hub.zip\n",
-        "!unzip ./checkpoints/hub.zip -d ./checkpoints/\n",
-        "!unzip ./checkpoints/BFM_Fitting.zip -d ./checkpoints/"
+        "!rm -rf checkpoints\n",
+        "!bash scripts/download_models.sh"
       ]
     },
     {
@@ -132,7 +113,7 @@
         "img_list = glob.glob1('examples/source_image', '*.png')\n",
         "img_list.sort()\n",
         "img_list = [item.split('.')[0] for item in img_list]\n",
-        "default_head_name = widgets.Dropdown(options=img_list, value='art_18')\n",
+        "default_head_name = widgets.Dropdown(options=img_list, value='full3')\n",
         "def on_change(change):\n",
         "    if change['type'] == 'change' and change['name'] == 'value':\n",
         "        plt.imshow(plt.imread('examples/source_image/{}.png'.format(default_head_name.value)))\n",
@@ -167,7 +148,7 @@
         "print(img)\n",
         "!python3.8 inference.py --driven_audio ./examples/driven_audio/RD_Radio31_000.wav \\\n",
         "           --source_image {img} \\\n",
-        "           --result_dir ./results "
+        "           --result_dir ./results --still --preprocess full --enhancer gfpgan"
       ]
     },
     {
