fix path of quick demo

--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "M74Gs_TjYl_B"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "view-in-github"
@@ -29,6 +31,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kA89DV-sKS4i"
@@ -76,6 +79,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DddcKB_nKsnk"
@@ -127,6 +131,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "-khNZcnGK4UK"
@@ -168,7 +173,7 @@
         "\n",
         "results = sorted(os.listdir('./results/'))\n",
         "\n",
-        "mp4_name = glob.glob('./results/'+results[-1]+'/*.mp4')[0]\n",
+        "mp4_name = glob.glob('./results/*.mp4')[0]\n",
         "\n",
         "mp4 = open('{}'.format(mp4_name),'rb').read()\n",
         "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
@@ -183,9 +188,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "base",
       "language": "python",
@@ -199,9 +206,7 @@
       "interpreter": {
         "hash": "db5031b3636a3f037ea48eb287fd3d023feb9033aefc2a9652a92e470fb0851b"
       }
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
