--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -60,23 +60,29 @@
       },
       "outputs": [],
       "source": [
-        "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.8 2  \n",
-        "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.9 1  \n",
-        "!sudo apt install python3.8",
-        "!sudo apt-get install python3.8-distutils",
-        "!python --version  \n",
+        "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.8 2\n",
+        "!update-alternatives --install /usr/local/bin/python3 python3 /usr/bin/python3.9 1\n",
+        "!sudo apt install python3.8\n",
+        "\n",
+        "!sudo apt-get install python3.8-distutils\n",
+        "\n",
+        "!python --version\n",
+        "\n",
         "!apt-get update\n",
+        "\n",
         "!apt install software-properties-common\n",
+        "\n",
         "!sudo dpkg --remove --force-remove-reinstreq python3-pip python3-setuptools python3-wheel\n",
+        "\n",
         "!apt-get install python3-pip\n",
         "\n",
         "print('Git clone project and install requirements...')\n",
         "!git clone https://github.com/Winfredy/SadTalker &> /dev/null\n",
-        "%cd SadTalker \n",
-        "!export PYTHONPATH=/content/SadTalker:$PYTHONPATH \n",
+        "%cd SadTalker\n",
+        "!export PYTHONPATH=/content/SadTalker:$PYTHONPATH\n",
         "!python3.8 -m pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113\n",
         "!apt update\n",
-        "!apt install ffmpeg &> /dev/null  \n",
+        "!apt install ffmpeg &> /dev/null\n",
         "!python3.8 -m pip install -r requirements.txt"
       ]
     },
